--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <meta property="og:title" content="Clan Invite - Clash Royale" />
      <meta property="og:description" content="Click this link to Join a clan in Clash Royale!" />
      <meta property="og:image" content="https://discover.therookies.co/content/images/size/w1000/2020/02/clash-royale.jpg" />
-     <meta property="og:url" content="https://github.com/delet35/ClashRoyalClanInvite.git" />
+     <meta property="og:url" content="https://delet35.github.io/ClashRoyalClanInvite1/" />
      <meta property="og:type" content="website" />
 
 
